fixed other articles right align

--- a/content/assets/css/style.sass
+++ b/content/assets/css/style.sass
@@ -186,6 +186,7 @@ ol, ul, pre
   float: left
   
 .newer
+  text-align: right
   float: right
   
 .passive
